@@ -12,6 +12,7 @@ chromIntensityPlot <- function(
                  colorBatch = FALSE,
                  batch.column = NULL,
 		 snp.exclude = NULL,
+                 cex=0.5,
 		 ...) 
 {
     # check arguments
@@ -101,7 +102,7 @@ chromIntensityPlot <- function(
         gcol <- rep("black", length(chri))
         if (colorGenotypes) {
             genos <- getGenotype(genoData, snp=c(chr.start,chr.count), scan=c(sid,1))
-            gcol[!is.na(genos) & genos == 0] <- "cyan"
+            gcol[!is.na(genos) & genos == 0] <- "blue"
             gcol[!is.na(genos) & genos == 1] <- "green"
             gcol[!is.na(genos) & genos == 2] <- "red"
         }
@@ -148,7 +149,7 @@ chromIntensityPlot <- function(
                 abline(v = abst, col = "red", lty = 2, lwd = 1.2)
             if (aben != -1) 
                 abline(v = aben, col = "red", lty = 2, lwd = 1.2)
-            points((posi/1e+06)[toPlot], logrratio[toPlot], ...)
+            points((posi/1e+06)[toPlot], logrratio[toPlot], cex=cex, ...)
             abline(h = mninten, col = "gray")
         }
         if (type == "BAF" | type == "BAF/LRR") {
@@ -163,7 +164,7 @@ chromIntensityPlot <- function(
                 abline(v = vals[d]/1e+06, col = "royalblue", 
                   lty = 3, lwd = 2)
             }
-            points((posi/1e+06)[toPlot], bafreq[toPlot], col = gcol[toPlot], ...)
+            points((posi/1e+06)[toPlot], bafreq[toPlot], col = gcol[toPlot], cex=cex, ...)
             abline(h = horizln, col = "gray")
         }
         if (type == "R" | type == "R/Theta") {
@@ -177,7 +178,7 @@ chromIntensityPlot <- function(
                 abline(v = abst, col = "red", lty = 2, lwd = 1.3)
             if (aben != -1) 
                 abline(v = aben, col = "red", lty = 2, lwd = 1.3)
-            points((posi/1e+06)[toPlot], r[toPlot], col = gcol[toPlot], ...)
+            points((posi/1e+06)[toPlot], r[toPlot], col = gcol[toPlot], cex=cex, ...)
         }
         if (type == "Theta" | type == "R/Theta") {
             plot((posi/1e+06)[toPlot], theta[toPlot], xlab = "position (Mb)", 
@@ -190,7 +191,7 @@ chromIntensityPlot <- function(
                 abline(v = abst, col = "red", lty = 2, lwd = 1.3)
             if (aben != -1) 
                 abline(v = aben, col = "red", lty = 2, lwd = 1.3)
-            points((posi/1e+06)[toPlot], r[toPlot], col = gcol[toPlot], ...)
+            points((posi/1e+06)[toPlot], r[toPlot], col = gcol[toPlot], cex=cex, ...)
         }
     }
 }
